--- a/viewport.html
+++ b/viewport.html
@@ -17,7 +17,7 @@
       <div id="togglemute"></div>
     </div>
 
-    <script src="build/vrview.js"></script>
+    <script src="js/vrview.js"></script>
     <script src="viewport.js"></script>
   </body>
 </html>
