--- a/viewport-embedded.html
+++ b/viewport-embedded.html
@@ -29,7 +29,7 @@
     };
     </script>
 
-    <script src="build/three.js"></script>
-    <script src="build/embed.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/embed.js"></script>
 	</body>
 </html>
