--- a/viewport.html
+++ b/viewport.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <title>VR View - video example</title>
+    <title>VR View Sample</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <link href="viewport.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    
     <div class="ui-viewport">
+    
     </div>
     <div id="controls">
         <div id="toggleplay" class="paused"></div>
         <div id="togglemute"></div>
     </div>
+
     <script src="js/vrview.js"></script>
     <script src="viewport.js"></script>
 </body>
