--- a/viewport-embedded.html
+++ b/viewport-embedded.html
@@ -27,8 +27,8 @@
         TOUCH_PANNER_DISABLED: false
     };
     </script>
-    <script src="js/three.js"></script>
-    <script src="js/embed.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/embed.min.js"></script>
 </body>
 
 </html>
