--- a/viewport.html
+++ b/viewport.html
@@ -18,7 +18,7 @@
         <div id="togglemute"></div>
     </div>
 
-    <script src="js/vrview.js"></script>
+    <script src="js/vrview.min.js"></script>
     <script src="viewport.js"></script>
 </body>
 
